--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@ rel="stylesheet">
     <title>Link Color Example</title>
   <style>
     a:link {
-      color: #f7faf7f5; /* Default color for unvisited links */
+      color: #f7faf7f5; 
     }
     a:visited {
-      color: #f7faf7f5; /* This stops the visited link from turning purple */
+      color: #f7faf7f5; 
     }
     a:hover {
-      color: black; /* Optional: Changes color when hovering */
+      color: black; 
     }
     
   </style>
